auto tabs replacement, better parsing, messages, improved hovers

--- a/l10n/bundle.l10n.json
+++ b/l10n/bundle.l10n.json
@@ -72,9 +72,9 @@
   "Error creating main scenario: {0}": "Error creating main scenario: {0}",
   "Select a file name to search.": "Select a file name to search.",
   "File \"{0}\" not found in the project.": "File \"{0}\" not found in the project.",
-  "Path to '1C:Enterprise — work with files' is not configured. Set it in `1cDriveHelper.paths.fileWorkshopExe`.": "Path to '1C:Enterprise — work with files' is not configured. Set it in `1cDriveHelper.paths.fileWorkshopExe`.",
+  "Path to '1C:Enterprise — File workshop' is not configured. Set it in `1cDriveHelper.paths.fileWorkshopExe`.": "Path to '1C:Enterprise — File workshop' is not configured. Set it in `1cDriveHelper.paths.fileWorkshopExe`.",
   "Open Settings": "Open Settings",
-  "Executable for '1C:Enterprise — work with files' not found at path: {0}": "Executable for '1C:Enterprise — work with files' not found at path: {0}",
+  "Executable for '1C:Enterprise — File workshop' not found at path: {0}": "Executable for '1C:Enterprise — File workshop' not found at path: {0}",
   "Error opening MXL file: {0}": "Error opening MXL file: {0}",
   "Found file is not an MXL file: {0}": "Found file is not an MXL file: {0}",
   "No active editor.": "No active editor.",
@@ -149,5 +149,44 @@
   "Updating Gherkin steps...": "Updating Gherkin steps...",
   "Loading Gherkin step definitions...": "Loading Gherkin step definitions...",
   "Gherkin autocompletion update completed.": "Gherkin autocompletion update completed.",
-  "Gherkin hints update completed.": "Gherkin hints update completed."
+  "Gherkin hints update completed.": "Gherkin hints update completed.",
+  "Tabs automatically replaced with spaces on save.": "Tabs automatically replaced with spaces on save.",
+  "Error initializing Gherkin autocompletion: {0}": "Error initializing Gherkin autocompletion: {0}",
+  "Failed to load Gherkin steps for autocompletion: {0}": "Failed to load Gherkin steps for autocompletion: {0}",
+  "Nested scenario (1C:Drive)": "Nested scenario (1C:Drive)",
+  "Call scenario \"{0}\".": "Call scenario \"{0}\".",
+  "Steps library successfully updated.": "Steps library successfully updated.",
+  "Error updating steps: {0}": "Error updating steps: {0}",
+  "Failed to load step definitions from external resource, cache, or local bundle.": "Failed to load step definitions from external resource, cache, or local bundle.",
+  "Error updating hints: {0}. Attempting to load from backup sources.": "Error updating hints: {0}. Attempting to load from backup sources.",
+  "Error loading interface: {0}": "Error loading interface: {0}",
+  "Error: Invalid data received for application.": "Error: Invalid data received for application.",
+  "Error: invalid data.": "Error: invalid data.",
+  "Failed to open scenario file: {0}": "Failed to open scenario file: {0}",
+  "Scenario \"{0}\" not found or its path is not defined.": "Scenario \"{0}\" not found or its path is not defined.",
+  "Failed to start build: Panel is not active.": "Failed to start build: Panel is not active.",
+  "Error searching for scenario files.": "Error searching for scenario files.",
+  "Searching for scenario files...": "Searching for scenario files...",
+  "Searching for scenario references...": "Searching for scenario references...",
+  "Opening scenario file...": "Opening scenario file...",
+  "Scenario file opened successfully.": "Scenario file opened successfully.",
+  "Searching for references to \"{0}\"...": "Searching for references to \"{0}\"...",
+  "Found {0} references": "Found {0} references",
+  "Select reference to open": "Select reference to open",
+  "Filling nested scenarios...": "Filling nested scenarios...",
+  "Scanning for called scenarios...": "Scanning for called scenarios...",
+  "Processing scenario files...": "Processing scenario files...",
+  "Adding nested scenarios to file...": "Adding nested scenarios to file...",
+  "Filling scenario parameters...": "Filling scenario parameters...",
+  "Scanning for used parameters...": "Scanning for used parameters...",
+  "Adding parameters to file...": "Adding parameters to file...",
+  "Searching for files...": "Searching for files...",
+  "Opening MXL file...": "Opening MXL file...",
+  "Revealing file in explorer...": "Revealing file in explorer...",
+  "Opening file in OS...": "Opening file in OS...",
+  "MXL file opened successfully.": "MXL file opened successfully.",
+  "File revealed in explorer.": "File revealed in explorer.",
+  "File opened in OS.": "File opened in OS.",
+      "File not found.": "File not found.",
+    "Description": "Description"
 }
