--- a/l10n/bundle.l10n.ru.json
+++ b/l10n/bundle.l10n.ru.json
@@ -72,9 +72,9 @@
   "Error creating main scenario: {0}": "Ошибка при создании главного сценария: {0}",
   "Select a file name to search.": "Выделите имя файла для поиска.",
   "File \"{0}\" not found in the project.": "Файл \"{0}\" не найден в проекте.",
-  "Path to '1C:Enterprise — work with files' is not configured. Set it in `1cDriveHelper.paths.fileWorkshopExe`.": "Путь к '1С:Предприятие — работа с файлами' не настроен. Укажите его в настройках `1cDriveHelper.paths.fileWorkshopExe`.",
+  "Path to '1C:Enterprise — File workshop' is not configured. Set it in `1cDriveHelper.paths.fileWorkshopExe`.": "Путь к '1С:Предприятие — работа с файлами' не настроен. Укажите его в настройках `1cDriveHelper.paths.fileWorkshopExe`.",
   "Open Settings": "Открыть настройки",
-  "Executable for '1C:Enterprise — work with files' not found at path: {0}": "Исполняемый файл '1С:Предприятие — работа с файлами' не найден по пути: {0}",
+  "Executable for '1C:Enterprise — File workshop' not found at path: {0}": "Исполняемый файл '1С:Предприятие — работа с файлами' не найден по пути: {0}",
   "Error opening MXL file: {0}": "Ошибка при открытии MXL файла: {0}",
   "Found file is not an MXL file: {0}": "Найденный файл не является MXL файлом: {0}",
   "No active editor.": "Нет активного редактора.",
@@ -101,9 +101,9 @@
   "Creating archive...": "Создание архива...",
   "Save FirstLaunch.zip": "Сохранить FirstLaunch.zip",
   "FirstLaunch.zip archive successfully saved": "Архив FirstLaunch.zip успешно сохранен",
-  "Open directory": "Открыть директорию",
+  "Open directory": "Открыть папку",
   "Archive saving cancelled.": "Сохранение архива отменено.",
-  "Error creating FirstLaunch.zip: {0}": "Ошибка при создании FirstLaunch.zip: {0}",
+  "Error creating FirstLaunch.zip: {0}": "Ошибка создания FirstLaunch.zip: {0}",
   "Applying changes...": "Применение изменений...",
   "Processing {0}...": "Обработка {0}...",
   "Error moving \"{0}\": {1}": "Ошибка перемещения \"{0}\": {1}",
@@ -149,5 +149,44 @@
   "Updating Gherkin steps...": "Обновление шагов Gherkin...",
   "Loading Gherkin step definitions...": "Загрузка определений шагов Gherkin...",
   "Gherkin autocompletion update completed.": "Обновление автодополнения Gherkin завершено.",
-  "Gherkin hints update completed.": "Обновление подсказок Gherkin завершено."
+  "Gherkin hints update completed.": "Обновление подсказок Gherkin завершено.",
+  "Tabs automatically replaced with spaces on save.": "Табуляции автоматически конвертированы в пробелы при сохранении.",
+  "Error initializing Gherkin autocompletion: {0}": "Ошибка инициализации автодополнения Gherkin: {0}",
+  "Failed to load Gherkin steps for autocompletion: {0}": "Не удалось загрузить шаги Gherkin для автодополнения: {0}",
+  "Nested scenario (1C:Drive)": "Вложенный сценарий (1C:Drive)",
+  "Call scenario \"{0}\".": "Вызвать сценарий \"{0}\".",
+  "Steps library successfully updated.": "Библиотека шагов успешно обновлена.",
+  "Error updating steps: {0}": "Ошибка при обновлении шагов: {0}",
+  "Failed to load step definitions from external resource, cache, or local bundle.": "Не удалось загрузить определения шагов ни с внешнего ресурса, ни из кеша, ни из локального бандла.",
+  "Error updating hints: {0}. Attempting to load from backup sources.": "Ошибка при обновлении подсказок: {0}. Попытка загрузить из резервных источников.",
+  "Error loading interface: {0}": "Ошибка загрузки интерфейса: {0}",
+  "Error: Invalid data received for application.": "Ошибка: Получены неверные данные для применения.",
+  "Error: invalid data.": "Ошибка: неверные данные.",
+  "Failed to open scenario file: {0}": "Не удалось открыть файл сценария: {0}",
+  "Scenario \"{0}\" not found or its path is not defined.": "Сценарий \"{0}\" не найден или его путь не определен.",
+  "Failed to start build: Panel is not active.": "Не удалось запустить сборку: панель не активна.",
+  "Error searching for scenario files.": "Ошибка при поиске файлов сценариев.",
+  "Searching for scenario files...": "Поиск файлов сценариев...",
+  "Searching for scenario references...": "Поиск ссылок на сценарий...",
+  "Opening scenario file...": "Открытие файла сценария...",
+  "Scenario file opened successfully.": "Файл сценария успешно открыт.",
+  "Searching for references to \"{0}\"...": "Поиск ссылок на \"{0}\"...",
+  "Found {0} references": "Найдено {0} ссылок",
+  "Select reference to open": "Выберите ссылку для открытия",
+  "Filling nested scenarios...": "Заполнение вложенных сценариев...",
+  "Scanning for called scenarios...": "Сканирование вызываемых сценариев...",
+  "Processing scenario files...": "Обработка файлов сценариев...",
+  "Adding nested scenarios to file...": "Добавление вложенных сценариев в файл...",
+  "Filling scenario parameters...": "Заполнение параметров сценария...",
+  "Scanning for used parameters...": "Сканирование используемых параметров...",
+  "Adding parameters to file...": "Добавление параметров в файл...",
+  "Searching for files...": "Поиск файлов...",
+  "Opening MXL file...": "Открытие MXL файла...",
+  "Revealing file in explorer...": "Отображение файла в проводнике...",
+  "Opening file in OS...": "Открытие файла в системе...",
+  "MXL file opened successfully.": "MXL файл успешно открыт.",
+  "File revealed in explorer.": "Файл отображен в проводнике.",
+  "File opened in OS.": "Файл открыт в системе.",
+  "File not found.": "Файл не найден.",
+  "Description": "Описание"
 }
