startup parameters and configurable paths

--- a/l10n/bundle.l10n.json
+++ b/l10n/bundle.l10n.json
@@ -107,12 +107,12 @@
   "Applying changes...": "Applying changes...",
   "Processing {0}...": "Processing {0}...",
   "Error moving \"{0}\": {1}": "Error moving \"{0}\": {1}",
-  "Enabled: {0}, Disabled: {1}, Skipped (not in UI): {2}, Errors: {3}": "Enabled: {0}, Disabled: {1}, Skipped (not in UI): {2}, Errors: {3}",
+  "Enabled: {0}, Disabled: {1}, Skipped: {2}, Errors: {3}": "Enabled: {0}, Disabled: {1}, Skipped: {2}, Errors: {3}",
   "Changes applied with errors! {0}": "Changes applied with errors! {0}",
   "Phase changes successfully applied! {0}": "Phase changes successfully applied! {0}",
   "Phase changes: nothing to apply. {0}": "Phase changes: nothing to apply. {0}",
   "Building tests in progress...": "Building tests in progress...",
-  "Building 1C:Drive tests": "Building 1C:Drive tests",
+  "Building .feature files": "Building .feature files",
   "Preparing...": "Preparing...",
   "Project folder must be opened.": "Project folder must be opened.",
   "Build error.": "Build error.",
@@ -121,7 +121,7 @@
   "Path to empty infobase is not specified in settings.": "Path to empty infobase is not specified in settings.",
   "Empty infobase directory not found at path: {0}": "Empty infobase directory not found at path: {0}",
   "Copying parameters...": "Copying parameters...",
-  "Processing DriveTrade...": "Processing DriveTrade...",
+  
   "Building YAML in feature...": "Building YAML in feature...",
   "YAML build error. See log: {0}": "YAML build error. See log: {0}",
   "Build result file {0} not found after waiting.": "Build result file {0} not found after waiting.",
@@ -153,7 +153,7 @@
   "Tabs automatically replaced with spaces on save.": "Tabs automatically replaced with spaces on save.",
   "Error initializing Gherkin autocompletion: {0}": "Error initializing Gherkin autocompletion: {0}",
   "Failed to load Gherkin steps for autocompletion: {0}": "Failed to load Gherkin steps for autocompletion: {0}",
-  "Nested scenario (1C:Drive)": "Nested scenario (1C:Drive)",
+  "Nested scenario (1C)": "Nested scenario (1C)",
   "Call scenario \"{0}\".": "Call scenario \"{0}\".",
   "Steps library successfully updated.": "Steps library successfully updated.",
   "Error updating steps: {0}": "Error updating steps: {0}",
@@ -188,5 +188,53 @@
   "File revealed in explorer.": "File revealed in explorer.",
   "File opened in OS.": "File opened in OS.",
       "File not found.": "File not found.",
-    "Description": "Description"
+    "Description": "Description",
+    "Using startup parameters: {0}": "Using startup parameters: {0}",
+    "Using default startup parameters": "Using default startup parameters",
+    "Using custom BuildScenarioBDD parameters: {0}": "Using custom BuildScenarioBDD parameters: {0}",
+    "Creating BuildErrors folder: {0}": "Creating BuildErrors folder: {0}",
+    "Clearing BuildErrors folder: {0}": "Clearing BuildErrors folder: {0}",
+    "Checking for build errors...": "Checking for build errors...",
+    "Build completed successfully - no errors found.": "Build completed successfully - no errors found.",
+    "Build failed with errors. Check error files in BuildErrors folder: {0}": "Build failed with errors. Check error files in BuildErrors folder: {0}",
+    "Open BuildErrors Folder": "Open BuildErrors Folder",
+    "Error checking build errors: {0}": "Error checking build errors: {0}",
+    "No detailed error information found in JUnit file.": "No detailed error information found in JUnit file.",
+    "Build completed with errors.": "Build completed with errors.",
+    "Build failed with {0} compilation errors. Open error file for details.": "Build failed with {0} compilation errors. Open error file for details.",
+    "Open Error File": "Open Error File",
+    "Show Output": "Show Output",
+    "Error parsing JUnit file: {0}": "Error parsing JUnit file: {0}",
+
+    "Feature file repair processing skipped - RepairTestFile.epf path not configured": "Feature file repair processing skipped - RepairTestFile.epf path not configured",
+    
+    "Successfully built {0} scenario(s):": "Successfully built {0} scenario(s):",
+    "Build failed - no scenarios built.": "Build failed - no scenarios built.",
+    "Build completed - no scenarios found.": "Build completed - no scenarios found.",
+    "Build Results Summary": "Build Results Summary",
+    "No scenarios were built.": "No scenarios were built.",
+    "Build failed with {0} compilation error(s):": "Build failed with {0} compilation error(s):",
+    
+    "Build completed: {0} successful, {1} errors.": "Build completed: {0} successful, {1} errors.",
+    "Build completed: {0} successful.": "Build completed: {0} successful.",
+    "Build failed: {0} errors.": "Build failed: {0} errors.",
+    
+    "Build process completed with errors, but {0} scenario(s) were built.": "Build process completed with errors, but {0} scenario(s) were built.",
+    "Build process failed - no scenarios were built.": "Build process failed - no scenarios were built.",
+    "Build process completed successfully with {0} scenario(s).": "Build process completed successfully with {0} scenario(s).",
+    "Build process completed but no scenarios were found.": "Build process completed but no scenarios were found.",
+    "For more details, check {0}": "For more details, check {0}",
+    
+    "Starting build process...": "Starting build process...",
+    "Build directory ensured: {0}": "Build directory ensured: {0}",
+    "yaml_parameters.json prepared at {0}": "yaml_parameters.json prepared at {0}",
+    "Building YAML files to feature file...": "Building YAML files to feature file...",
+    "YAML build successful.": "YAML build successful.",
+    "Writing parameters from pipeline into tests...": "Writing parameters from pipeline into tests...",
+    "Repairing specific feature files...": "Repairing specific feature files...",
+    "Removing \"Administrator\" from 001_Company_tests...": "Removing \"Administrator\" from 001_Company_tests...",
+    "  - Correcting user in {0}": "  - Correcting user in {0}",
+    "  - Correction applied successfully.": "  - Correction applied successfully.",
+    "  - Skipped user correction: {0} not found.": "  - Skipped user correction: {0} not found.",
+    "--- WARNING: Error applying correction to {0}: {1} ---": "--- WARNING: Error applying correction to {0}: {1} ---"
 }
