--- a/l10n/bundle.l10n.ru.json
+++ b/l10n/bundle.l10n.ru.json
@@ -107,12 +107,12 @@
   "Applying changes...": "Применение изменений...",
   "Processing {0}...": "Обработка {0}...",
   "Error moving \"{0}\": {1}": "Ошибка перемещения \"{0}\": {1}",
-  "Enabled: {0}, Disabled: {1}, Skipped (not in UI): {2}, Errors: {3}": "Включено: {0}, Выключено: {1}, Пропущено (не в UI): {2}, Ошибки: {3}",
+  "Enabled: {0}, Disabled: {1}, Skipped: {2}, Errors: {3}": "Включено: {0}, Выключено: {1}, Пропущено: {2}, Ошибки: {3}",
   "Changes applied with errors! {0}": "Изменения применены с ошибками! {0}",
   "Phase changes successfully applied! {0}": "Изменения фаз успешно применены! {0}",
   "Phase changes: nothing to apply. {0}": "Изменения фаз: нечего применять. {0}",
   "Building tests in progress...": "Сборка тестов в процессе...",
-  "Building 1C:Drive tests": "Сборка тестов 1C:Drive",
+  "Building .feature files": "Сборка .feature файлов",
   "Preparing...": "Подготовка...",
   "Project folder must be opened.": "Необходимо открыть папку проекта.",
   "Build error.": "Ошибка сборки.",
@@ -121,7 +121,7 @@
   "Path to empty infobase is not specified in settings.": "Путь к пустой информационной базе не указан в настройках.",
   "Empty infobase directory not found at path: {0}": "Каталог пустой информационной базы не найден по пути: {0}",
   "Copying parameters...": "Копирование параметров...",
-  "Processing DriveTrade...": "Обработка DriveTrade...",
+  
   "Building YAML in feature...": "Сборка YAML в feature...",
   "YAML build error. See log: {0}": "Ошибка сборки YAML. См. лог: {0}",
   "Build result file {0} not found after waiting.": "Файл результата сборки {0} не найден после ожидания.",
@@ -153,7 +153,7 @@
   "Tabs automatically replaced with spaces on save.": "Табуляции автоматически конвертированы в пробелы при сохранении.",
   "Error initializing Gherkin autocompletion: {0}": "Ошибка инициализации автодополнения Gherkin: {0}",
   "Failed to load Gherkin steps for autocompletion: {0}": "Не удалось загрузить шаги Gherkin для автодополнения: {0}",
-  "Nested scenario (1C:Drive)": "Вложенный сценарий (1C:Drive)",
+  "Nested scenario (1C)": "Вложенный сценарий (1C)",
   "Call scenario \"{0}\".": "Вызвать сценарий \"{0}\".",
   "Steps library successfully updated.": "Библиотека шагов успешно обновлена.",
   "Error updating steps: {0}": "Ошибка при обновлении шагов: {0}",
@@ -187,6 +187,54 @@
   "MXL file opened successfully.": "MXL файл успешно открыт.",
   "File revealed in explorer.": "Файл отображен в проводнике.",
   "File opened in OS.": "Файл открыт в системе.",
-  "File not found.": "Файл не найден.",
-  "Description": "Описание"
+        "File not found.": "Файл не найден.",
+    "Description": "Описание",
+    "Using startup parameters: {0}": "Используются параметры запуска: {0}",
+    "Using default startup parameters": "Используются стандартные параметры запуска",
+    "Using custom BuildScenarioBDD parameters: {0}": "Используются пользовательские параметры BuildScenarioBDD: {0}",
+    "Creating BuildErrors folder: {0}": "Создание папки BuildErrors: {0}",
+    "Clearing BuildErrors folder: {0}": "Очистка папки BuildErrors: {0}",
+    "Checking for build errors...": "Проверка ошибок сборки...",
+    "Build completed successfully - no errors found.": "Сборка завершена успешно - ошибок не обнаружено.",
+    "Build failed with errors. Check error files in BuildErrors folder: {0}": "Сборка завершилась с ошибками. Проверьте файлы ошибок в папке BuildErrors: {0}",
+    "Open BuildErrors Folder": "Открыть папку BuildErrors",
+    "Error checking build errors: {0}": "Ошибка при проверке ошибок сборки: {0}",
+    "No detailed error information found in JUnit file.": "Детальная информация об ошибках в JUnit файле не найдена.",
+    "Build completed with errors.": "Сборка завершена с ошибками.",
+    "Build failed with {0} compilation errors. Open error file for details.": "Сборка завершилась с {0} ошибками компиляции. Откройте файл ошибок для подробностей.",
+    "Open Error File": "Открыть файл ошибок",
+    "Show Output": "Показать вывод",
+    "Error parsing JUnit file: {0}": "Ошибка при разборе JUnit файла: {0}",
+
+    "Feature file repair processing skipped - RepairTestFile.epf path not configured": "Обработка исправления feature файлов пропущена - путь к RepairTestFile.epf не настроен",
+    
+    "Successfully built {0} scenario(s):": "Успешно собрано {0} сценарий(-ев):",
+    "Build failed - no scenarios built.": "Сборка не удалась - сценарии не собраны.",
+    "Build completed - no scenarios found.": "Сборка завершена - сценарии не найдены.",
+    "Build Results Summary": "Сводка результатов сборки",
+    "No scenarios were built.": "Сценарии не были собраны.",
+    "Build failed with {0} compilation error(s):": "Сборка завершилась с {0} ошибкой(-ами) компиляции:",
+    
+    "Build completed: {0} successful, {1} errors.": "Сборка завершена: {0} успешно, {1} ошибок.",
+    "Build completed: {0} successful.": "Сборка завершена: {0} успешно.",
+    "Build failed: {0} errors.": "Сборка завершилась неудачно: {0} ошибок.",
+    
+    "Build process completed with errors, but {0} scenario(s) were built.": "Процесс сборки завершился с ошибками, но {0} сценарий(-ев) было собрано.",
+    "Build process failed - no scenarios were built.": "Процесс сборки завершился неудачно - сценарии не были собраны.",
+    "Build process completed successfully with {0} scenario(s).": "Процесс сборки успешно завершен с {0} сценарий(-ями).",
+    "Build process completed but no scenarios were found.": "Процесс сборки завершен, но сценарии не найдены.",
+    "For more details, check {0}": "Для получения подробностей проверьте {0}",
+    
+    "Starting build process...": "Начинаем процесс сборки...",
+    "Build directory ensured: {0}": "Директория сборки подготовлена: {0}",
+    "yaml_parameters.json prepared at {0}": "yaml_parameters.json подготовлен в {0}",
+    "Building YAML files to feature file...": "Сборка YAML файлов в feature файлы...",
+    "YAML build successful.": "YAML сборка успешна.",
+    "Writing parameters from pipeline into tests...": "Запись параметров из пайплайна в тесты...",
+    "Repairing specific feature files...": "Исправление конкретных feature файлов...",
+    "Removing \"Administrator\" from 001_Company_tests...": "Удаление \"Administrator\" из 001_Company_tests...",
+    "  - Correcting user in {0}": "  - Исправление пользователя в {0}",
+    "  - Correction applied successfully.": "  - Исправление применено успешно.",
+    "  - Skipped user correction: {0} not found.": "  - Пропущено исправление пользователя: {0} не найден.",
+    "--- WARNING: Error applying correction to {0}: {1} ---": "--- ПРЕДУПРЕЖДЕНИЕ: Ошибка применения исправления к {0}: {1} ---"
 }
