--- a/l10n/bundle.l10n.json
+++ b/l10n/bundle.l10n.json
@@ -21,6 +21,9 @@
   "Expand phase": "Expand phase",
   "Toggle all tests in this phase": "Toggle all tests in this phase",
   "No tests in this phase.": "No tests in this phase.",
+  "No phases to display.": "No phases to display.",
+  "Checkbox data error": "Checkbox data error",
+  "Ready to work.": "Ready to work.",
   "Error loading tests.": "Error loading tests.",
   "Expand all phases": "Expand all phases",
   "Collapse all phases": "Collapse all phases",
