--- a/l10n/bundle.l10n.ru.json
+++ b/l10n/bundle.l10n.ru.json
@@ -21,6 +21,9 @@
   "Expand phase": "Развернуть фазу",
   "Toggle all tests in this phase": "Переключить все тесты в этой фазе",
   "No tests in this phase.": "В этой фазе нет тестов.",
+  "No phases to display.": "Нет фаз для отображения.",
+  "Checkbox data error": "Ошибка данных чекбокса",
+  "Ready to work.": "Готово к работе.",
   "Error loading tests.": "Ошибка загрузки тестов.",
   "Expand all phases": "Развернуть все фазы",
   "Collapse all phases": "Свернуть все фазы",
