--- a/l10n/bundle.l10n.json
+++ b/l10n/bundle.l10n.json
@@ -208,7 +208,7 @@
     "Description": "Description",
     "Using startup parameters: {0}": "Using startup parameters: {0}",
     "Using default startup parameters": "Using default startup parameters",
-    "Using custom BuildScenarioBDD parameters: {0}": "Using custom BuildScenarioBDD parameters: {0}",
+  
     "Creating BuildErrors folder: {0}": "Creating BuildErrors folder: {0}",
     "Clearing BuildErrors folder: {0}": "Clearing BuildErrors folder: {0}",
     "Checking for build errors...": "Checking for build errors...",
@@ -254,5 +254,34 @@
     "  - Correction applied successfully.": "  - Correction applied successfully.",
     "  - Skipped user correction: {0} not found.": "  - Skipped user correction: {0} not found.",
     "--- WARNING: Error applying correction to {0}: {1} ---": "--- WARNING: Error applying correction to {0}: {1} ---",
-    "Show refill section messages": "Show refill section messages"
+    "Show refill section messages": "Show refill section messages",
+    "openYamlParametersManagerTitle": "Open Build Scenario Parameters Manager",
+    "yamlParameters": "Build Scenario Parameters",
+    "Build Scenario Parameters Manager": "Build Scenario Parameters Manager",
+    "Manage build scenario parameters for test configuration": "Manage build scenario parameters for test configuration",
+    "You can use relative paths from project root or full paths.": "You can use relative paths from project root or full paths.",
+    "Add Parameter": "Add Parameter",
+    "Reset to Defaults": "Reset to Defaults",
+    "Parameter": "Parameter",
+    "Value": "Value",
+    "Actions": "Actions",
+    "Apply": "Apply",
+    "Save file": "Save file",
+    "Load from JSON": "Load from JSON",
+    "More actions": "More actions",
+    "Help": "Help",
+    "More information about parameters on ITS": "More information about parameters on ITS",
+    "Preparing parameters...": "Preparing parameters...",
+    "yaml_parameters.json generated at {0}": "yaml_parameters.json generated at {0}",
+    "Build scenario parameters saved successfully": "Build scenario parameters saved successfully",
+    "Error saving parameters: {0}": "Error saving parameters: {0}",
+    "No workspace folder is open": "No workspace folder is open",
+    "Build scenario parameters file created at: {0}": "Build scenario parameters file created at: {0}",
+    "Open File": "Open File",
+    "Open Folder": "Open Folder",
+    "Error creating JSON file: {0}": "Error creating JSON file: {0}",
+    "Load Build Scenario Parameters from JSON": "Load Build Scenario Parameters from JSON",
+    "Loaded {0} parameters from {1}": "Loaded {0} parameters from {1}",
+    "Invalid JSON format. Expected key-value object.": "Invalid JSON format. Expected key-value object.",
+    "Error loading JSON file: {0}": "Error loading JSON file: {0}"
 }
