--- a/l10n/bundle.l10n.ru.json
+++ b/l10n/bundle.l10n.ru.json
@@ -208,7 +208,7 @@
     "Description": "Описание",
     "Using startup parameters: {0}": "Используются параметры запуска: {0}",
     "Using default startup parameters": "Используются стандартные параметры запуска",
-    "Using custom BuildScenarioBDD parameters: {0}": "Используются пользовательские параметры BuildScenarioBDD: {0}",
+  
     "Creating BuildErrors folder: {0}": "Создание папки BuildErrors: {0}",
     "Clearing BuildErrors folder: {0}": "Очистка папки BuildErrors: {0}",
     "Checking for build errors...": "Проверка ошибок сборки...",
@@ -254,5 +254,34 @@
     "  - Correction applied successfully.": "  - Исправление применено успешно.",
     "  - Skipped user correction: {0} not found.": "  - Пропущено исправление пользователя: {0} не найден.",
     "--- WARNING: Error applying correction to {0}: {1} ---": "--- ПРЕДУПРЕЖДЕНИЕ: Ошибка применения исправления к {0}: {1} ---",
-    "Show refill section messages": "Показывать сообщения о заполнении секций"
+    "Show refill section messages": "Показывать сообщения о заполнении секций",
+    "openYamlParametersManagerTitle": "Открыть Менеджер параметров Сборки Сценариев",
+    "yamlParameters": "Параметры сборки сценариев",
+    "Build Scenario Parameters Manager": "Менеджер параметров Сборки Сценариев",
+    "Manage build scenario parameters for test configuration": "Управление параметрами сборки сценариев для конфигурации тестов",
+    "You can use relative paths from project root or full paths.": "Вы можете использовать относительные пути от корня проекта или полные пути.",
+    "Add Parameter": "Добавить параметр",
+    "Reset to Defaults": "Сбросить к умолчанию",
+    "Parameter": "Параметр",
+    "Value": "Значение",
+    "Actions": "Действия",
+    "Apply": "Применить",
+    "Save file": "Сохранить файл",
+    "Load from JSON": "Загрузить из JSON",
+    "More actions": "Дополнительно",
+    "Help": "Справка",
+    "More information about parameters on ITS": "Подробнее о параметрах на ИТС",
+    "Preparing parameters...": "Подготовка параметров...",
+    "yaml_parameters.json generated at {0}": "yaml_parameters.json сгенерирован в {0}",
+    "Build scenario parameters saved successfully": "Параметры сборки сценариев успешно сохранены",
+    "Error saving parameters: {0}": "Ошибка сохранения параметров: {0}",
+    "No workspace folder is open": "Рабочая папка не открыта",
+    "Build scenario parameters file created at: {0}": "Файл параметров сборки сценариев создан в: {0}",
+    "Open File": "Открыть файл",
+    "Open Folder": "Открыть папку",
+    "Error creating JSON file: {0}": "Ошибка создания JSON файла: {0}",
+    "Load Build Scenario Parameters from JSON": "Загрузить параметры сборки сценариев из JSON",
+    "Loaded {0} parameters from {1}": "Загружено {0} параметров из {1}",
+    "Invalid JSON format. Expected key-value object.": "Неверный формат JSON. Ожидается объект ключ-значение.",
+    "Error loading JSON file: {0}": "Ошибка загрузки JSON файла: {0}"
 }
