--- a/l10n/bundle.l10n.json
+++ b/l10n/bundle.l10n.json
@@ -255,7 +255,7 @@
     "  - Skipped user correction: {0} not found.": "  - Skipped user correction: {0} not found.",
     "--- WARNING: Error applying correction to {0}: {1} ---": "--- WARNING: Error applying correction to {0}: {1} ---",
     "Show refill section messages": "Show refill section messages",
-    "openYamlParametersManagerTitle": "Open Build Scenario Parameters Manager",
+    "Open Build Scenario Parameters Manager": "Open Build Scenario Parameters Manager",
     "yamlParameters": "Build Scenario Parameters",
     "Build Scenario Parameters Manager": "Build Scenario Parameters Manager",
     "Manage build scenario parameters for test configuration": "Manage build scenario parameters for test configuration",
